--- a/T.SQL.Core/T.SQL.Core.csproj
+++ b/T.SQL.Core/T.SQL.Core.csproj
@@ -18,16 +18,14 @@
     <DebugSymbols>true</DebugSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <IncludeContentInPack>true</IncludeContentInPack>
-
-	<NoWarn Condition="'$(Configuration)' == 'Release'">$(NoWarn);CS0618;</NoWarn>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.8" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\T.SQL.Core\T.SQL.Core.csproj" />
+  <ItemGroup Condition="'$(TargetFramework)'=='net48'">
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.8" />
   </ItemGroup>
   
   <ItemGroup>
