--- a/T.SQL.Core/T.SQL.Core.csproj
+++ b/T.SQL.Core/T.SQL.Core.csproj
@@ -21,16 +21,18 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.8" />
+	  <PackageReference Include="System.Memory" Version="4.5.5" />
+	  <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.8" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net48'">
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.8" />
+	  <PackageReference Include="System.Memory" Version="4.5.5" />
+	  <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.8" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName).Test</_Parameter1>
-    </AssemblyAttribute>
+	  <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+		  <_Parameter1>$(MSBuildProjectName).Test</_Parameter1>
+	  </AssemblyAttribute>
   </ItemGroup>
 </Project>
