--- a/T.SQL.Mapper.Old/T.SQL.Mapper.Old.csproj
+++ b/T.SQL.Mapper.Old/T.SQL.Mapper.Old.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
+	<RootNamespace>T.SQL.Mapper</RootNamespace>
 
     <IsPackable>true</IsPackable>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
